src/main/resources/tests/Semantics/good/recordAccesDecla.canAda
with Ada.Text_IO; use Ada.Text_IO;

procedure UseRecord is
   X : integer;
   type RecordTest is record
      Field1 : integer;
   end record;
   Var1 : RecordTest; -- Correct si RecordTest est bien défini avant cette déclaration.
begin
    X := 5;
end UseRecord;
