src/main/resources/tests/Semantics/bad/recordAlready.canAda
with Ada.Text_IO; use Ada.Text_IO;

procedure UseRecord is
   Var1 : RecordTest; -- Correct si RecordTest est bien défini avant cette déclaration.
   type RecordTest is record
      Field1 : Integer;
      Field1 : Float; -- Doit générer une erreur de compilation car 'Field1' est déjà déclaré.
   end record;
begin
   X := 10;
end UseRecord;
